Fixed centerpiece misalignment when a single slide is present

--- a/src/scss/_centerpiece.scss
+++ b/src/scss/_centerpiece.scss
@@ -25,7 +25,7 @@
   ul {
     height: 338px;
     margin-bottom: 0;
-    margin-left: 0;
+    padding-left: 0;
     overflow: hidden;
 
     @media (max-width: $screen-sm-max) {
